Fixed contact page on mobile

--- a/styles/social.css
+++ b/styles/social.css
@@ -9,7 +9,7 @@ body {
   flex-wrap: wrap;
   color: rgb(14, 121, 178);
   font-size: 1rem;
-  padding: 200px;
+  padding: 200px 0;
   flex: 1 1 300px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -35,4 +35,8 @@ body {
   color: grey;
   text-decoration: none;
   font-weight: bold;
+}
+
+.contact-container a:hover {
+  text-decoration: underline;
 }
